test/src/e2e_vm_tests/test_programs/should_pass/language/reexport/glob_imported_items/src/items_1.sw
library;

pub struct Items1Struct {
    pub a: u64,
}

pub enum Items1Enum1 {
    A: u64,
    B: u64,
}

pub enum Items1Enum2 {
    X: u64,
    Y: u64,
}

pub fn items_1_function_1() -> u64 {
    1
}

pub fn items_1_function_2() -> u64 {
    2
}


